--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <link rel="stylesheet" href="./resources/styles.css" />
   </head>
   <body>
@@ -34,6 +42,25 @@
           <li><a href="#about-us">About Us</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#join-us">Join Us</a></li>
+        </ul>
+      </div>
+      <div class="navigation-icons">
+        <ul>
+          <li>
+            <a href="#about-us"
+              ><span class="material-symbols-outlined"> info </span></a
+            >
+          </li>
+          <li>
+            <a href="#gallery"
+              ><span class="material-symbols-outlined">
+                gallery_thumbnail
+              </span></a
+            >
+          </li>
+          <li>
+            <button>Join Us!</button>
+          </li>
         </ul>
       </div>
     </header>
@@ -143,9 +170,9 @@
           <h2>Become a Furry Foster Friend!</h2>
           <p>
             We are a <b>global</b> group of dog-lovers who connect weekly via
-            <b>Zoom</b> to discuss our foster situation. Whether it's
-            asking questions, giving tips, or simply sharing silly stories about
-            our four-legged foster friends, we can't wait to have you
+            <b>Zoom</b> to discuss our foster situation. Whether it's asking
+            questions, giving tips, or simply sharing silly stories about our
+            four-legged foster friends, we can't wait to have you
           </p>
           <button>Join Us!</button>
         </div>
